# hn2016_falwa

./: .coverage  .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  Example_barotropic.html  Example_barotropic.ipynb  Example_barotropic.py  Example_qgpv.html  Example_qgpv.ipynb  Example_qgpv.py  Example_qgpv_for_nnn.py  LICENSE.txt  codecov.yml  environment.yml  environment_developer.yml  environment_intel_cython.yml  environment_intel_grl.yml  index.html  meson.build  new_install.md  pyproject.toml  readme.md  readme.txt  readthedocs.yml  requirements.txt  setup.py  setup_cython.py  test_first_push.md
.github/workflows/: github-repo-stats.yml  publish_conda.yml  publish_to_pypi.yml  python-build-test.yml  python-package.yml  workflow.yml
.ipynb_checkpoints/: Example_barotropic-checkpoint.ipynb
csyhuang/hn2016_falwa/: README.md
developers/: backend_choice.md  f-order-to-c-order.md  numba_migration_plan.md  numerical_difference_during_translation.md  refactor_process.md  run_through_notebooks.sh  strategy_pattern.md  suggested_optimization_summary.md
doc/: Makefile
doc/source/: Basis Functions.rst  conf.py  index.rst
docs/: Makefile  requirements.txt
docs/source/: Barotropic Field.rst  Basis Functions.rst  Beta-version Functions.rst  Data Storage.rst  Example Notebooks.rst  Memo for Developers.rst  Object Oriented Interface.rst  Plot Utilities.rst  Preprocessing.rst  Statistics Utilities.rst  Utility Functions.rst  Wrapper Functions.rst  Xarray Interface.rst  conf.py  index.rst  modules.rst  netCDF Utilities.rst
examples/: Example_barotropic.ipynb  Example_qgpv.ipynb  Example_qgpv_2014Jan2.ipynb  Plotly-map-demo-QGPV-LWA-20140102-Coldsnap.html  Plotly-map-demo-QGPV-LWA-20140102-Coldsnap.ipynb  QGPV_140102_1200.pckl  environment.yml  oopinterface_example_BarotropicField.ipynb  oopinterface_example_QGField.ipynb
examples/.ipynb_checkpoints/: example_barotropic-checkpoint.ipynb  example_qgpv-checkpoint (Case Conflict).ipynb  example_qgpv-checkpoint.ipynb
examples/nh2018_science/: README.md  demo_script_for_nh2018.ipynb  demo_script_for_nh2018_check_computation.ipynb  demo_script_for_nh2018_with_xarray.ipynb  download_example.py
falwa/: __init__.py  barotropic_field.py  basis.py  data_storage.py  netcdf_utils.py  oopinterface.py  plot_utils.py  stat_utils.py  xarrayinterface.py
falwa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hn2016_falwa/: Solve_URef_adiabatic_hemisphere.py  Solve_URef_noslip_hemisphere.py  __init__.py  api.py  barotropic_field.py  barotropic_lwa.py  basis.py  beta_version.py  compute_flux_dirinv.f90  compute_local_fluxes.f90  compute_lwa_and_barotropic_fluxes.f90  compute_qref_and_fawa_first.f90  compute_reference_states.f90  constant.py  data_storage.py  download_data.py  eqv_lat.py  interpolate_fields.f90  interpolate_fields_dirinv.f90  inversion_refactored.f90  lwa.py  lwa_ncforce.py  matrix_after_inversion.f90  matrix_b4_inversion.f90  oopinterface.py  plot_utilities.py  plot_utils.py  qgformalism.py  qgpv.py  qgpv_lwa.py  qgpv_lwa_ncforce.py  solve_uref_noslip_hemisphere.py  static_stability.py  theta_lwa.py  upward_sweep.f90  utilities.py  wrapper.py  xarrayinterface.py
hn2016_falwa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: README.md  environment.yml
notes/developer/: mdtf_plan.md  (+5 more)
recipe/: build.sh  error.md  meta.yaml
scripts/: check_import.py  clear_numba_cache.py  compare_numba_fortran.py  readme.md  reply_hs2112.py  test_compute_reference_states.py  test_numba_integration.py
show_noboru/: era4004n.f90
src/: meson.build
src/falwa/: __init__.py  barotropic_field.py  basis.py  constant.py  data_storage.py  hemisphere_strategy.py  netcdf_utils.py  oopinterface.py  plot_utils.py  preprocessing.py  stat_utils.py  utilities.py  wrapper.py  xarrayinterface.py
src/falwa/f90_modules/: compute_flux_dirinv.f90  compute_lwa_and_barotropic_fluxes.f90  compute_lwa_and_layerwise_fluxes.f90  compute_lwa_only_nhn22.f90  compute_qgpv.f90  compute_qgpv_direct_inv.f90  compute_qref_and_fawa_first.f90  compute_reference_states.f90  interpolate_fields_direct_inv.f90  matrix_after_inversion.f90  matrix_b4_inversion.f90  meson.build  upward_sweep.f90
src/falwa/numba_modules/: __init__.py  compute_flux_dirinv.py  compute_lwa_only_nhn22.py  compute_qgpv.py  compute_qgpv_direct_inv.py  compute_qref_and_fawa_first.py  compute_reference_states.py  matrix_after_inversion.py  matrix_b4_inversion.py  upward_sweep.py
tests/: __init__.py  conftest.py  test_barotropic_field.py  test_basis.py  test_hemisphere_strategy.py  test_integration.py  test_lwa.py  test_numba_modules.py  test_oopinterface.py  test_output_results.py  test_qgfield_nhn22_detailed.py  test_utilities.py  test_xarrayinterface.py
(+608 files in other folders)
