[build-system]
build-backend = "mesonpy"
requires = ["numpy", "meson-python"]

[project]
name = "falwa"
authors = [
    { name="Clare S. Y. Huang", email="csyhuang@uchicago.edu" },
    { name="Christopher Polster", email="cpolster@uni-mainz.de" },
]
description = "Python package to compute finite-amplitude local wave activity diagnostics (Huang and Nakamura 2016, JAS)"
readme = "readme.md"
license = { file="LICENSE.txt" }
version = "2.1.0"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.22",
    "scipy",
    "xarray"
]

[project.optional-dependencies]
test = [
    "pytest",
    "netcdf4",
    "dask"
]

[project.urls]
"Documentation" = "https://hn2016-falwa.readthedocs.io/"
"Repository" = "https://github.com/csyhuang/hn2016_falwa"
"Bug Tracker" = "https://github.com/csyhuang/hn2016_falwa/issues"

