py.install_sources(
    'falwa/__init__.py',
    'falwa/barotropic_field.py',
    'falwa/basis.py',
    'falwa/constant.py',
    'falwa/data_storage.py',
    'falwa/oopinterface.py',
    'falwa/plot_utils.py',
    'falwa/utilities.py',
    'falwa/wrapper.py',
    'falwa/xarrayinterface.py',
    'falwa/legacy/__init__.py',
    'falwa/legacy/beta_version.py',
    'falwa/numba_modules/__init__.py',
    'falwa/numba_modules/compute_qgpv.py',
    'falwa/numba_modules/compute_qgpv_direct_inv.py',
    'falwa/numba_modules/compute_reference_states.py',
    preserve_path: true
)

subdir('falwa/f90_modules')
